Fix dice not showing on fail_climb

--- a/frontend/src/stylesheets/dont_stop/dont_stop.scss
+++ b/frontend/src/stylesheets/dont_stop/dont_stop.scss
@@ -149,7 +149,7 @@
   height: 8px;
   border-radius: 50%;
   background-color: #333;
-  box-shadow: 1px 1px 2px #111;
+  box-shadow: 1px 1px 1px #111;
 }
 
 .pip:nth-child(2) {
